--- a/serverless.yml
+++ b/serverless.yml
@@ -15,8 +15,7 @@ package:
     - ./bin/**
 
 functions:
-  hello:
+  notify:
     handler: bin/handler
     environment:
       SLACK_WEBHOOK_URL: ${env:SLACK_WEBHOOK_URL}
-
