Fixed cron expression.

--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,6 @@ functions:
   notify:
     handler: bin/handler
     events:
-      - schedule: cron(0 21 * * * *)
+      - schedule: cron(0 21 * * ? *)
     environment:
       SLACK_WEBHOOK_URL: ${env:SLACK_WEBHOOK_URL}
