--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,7 @@ package:
 functions:
   notify:
     handler: bin/handler
+    memorySize: 256
     events:
       - schedule: cron(0 21 * * ? *)
     environment:
